// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderPhp matches the snapshot for multi-version.json 1`] = `
"<?php

// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer ht-sdks/events-sdk-php v0.0.1 or later.

declare(strict_types=1);

use Hightouch\\Client;

class TrackOrderCompletedV1
{
    /** @var mixed */
    public $orderId;
}

class TrackOrderCompletedV2
{
    /** @var mixed */
    public $orderId;
    /** @var mixed */
    public $total;
}

final class HtEvents
{
    /** @param mixed $value
     * @return array<string, mixed>
     */
    private static function toMap($value): array
    {
        if ($value === null) {
            return [];
        }
        if (is_array($value)) {
            return $value;
        }
        $out = [];
        foreach (get_object_vars($value) as $key => $val) {
            if ($val !== null) {
                $out[$key] = $val;
            }
        }
        return $out;
    }

    /**
     * @param array<string, mixed> $root
     * @param list<string> $path
     * @return array<string, mixed>
     */
    private static function setAtPath(array $root, array $path, string $value): array
    {
        if (count($path) === 0) {
            return $root;
        }
        $clone = $root;
        $cursor = &$clone;
        for ($i = 0; $i < count($path) - 1; $i++) {
            $key = $path[$i];
            $next = $cursor[$key] ?? [];
            $cursor[$key] = is_array($next) ? $next : [];
            $cursor = &$cursor[$key];
        }
        $cursor[$path[count($path) - 1]] = $value;
        unset($cursor);
        return $clone;
    }

    /**
     * @param array<string, mixed> $data
     * @param array<string, mixed>|null $context
     * @param list<string>|null $path
     * @return array{0: array<string, mixed>, 1: array<string, mixed>|null}
     */
    private static function withSchemaVersion(array $data, ?array $context, ?array $path, string $version, string $envelopeKey): array
    {
        if ($path === null || count($path) === 0) {
            return [$data, $context];
        }
        $head = $path[0];
        $rest = array_slice($path, 1);
        if ($head === $envelopeKey) {
            return [self::setAtPath($data, $rest, $version), $context];
        }
        if ($head === "context") {
            $ctx = is_array($context) ? $context : [];
            return [$data, self::setAtPath($ctx, $rest, $version)];
        }
        return [$data, $context];
    }

    public static function trackOrderCompletedV1(Client $client, string $userId, TrackOrderCompletedV1 $properties, array $options = []): void
    {
        [$data, $ctx] = self::withSchemaVersion(self::toMap($properties), $options['context'] ?? null, null, "v1", "properties");
        $client->track([
            'userId' => $userId,
            'event' => "Order Completed",
            'properties' => $data,
            'context' => $ctx,
            'anonymousId' => $options['anonymousId'] ?? null,
            'timestamp' => $options['timestamp'] ?? null,
            'integrations' => $options['integrations'] ?? null,
        ]);
    }

    public static function trackOrderCompletedV2(Client $client, string $userId, TrackOrderCompletedV2 $properties, array $options = []): void
    {
        [$data, $ctx] = self::withSchemaVersion(self::toMap($properties), $options['context'] ?? null, null, "v2", "properties");
        $client->track([
            'userId' => $userId,
            'event' => "Order Completed",
            'properties' => $data,
            'context' => $ctx,
            'anonymousId' => $options['anonymousId'] ?? null,
            'timestamp' => $options['timestamp'] ?? null,
            'integrations' => $options['integrations'] ?? null,
        ]);
    }

    public static function trackOrderCompleted(Client $client, string $userId, TrackOrderCompletedV2 $properties, array $options = []): void
    {
        self::trackOrderCompletedV2($client, $userId, $properties, $options);
    }
}
"
`;

exports[`renderPhp matches the snapshot for simple-track.json 1`] = `
"<?php

// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer ht-sdks/events-sdk-php v0.0.1 or later.

declare(strict_types=1);

use Hightouch\\Client;

class TrackOrderCompletedDefault
{
    /** @var mixed */
    public $orderId;
    /** @var mixed */
    public $total;
}

final class HtEvents
{
    /** @param mixed $value
     * @return array<string, mixed>
     */
    private static function toMap($value): array
    {
        if ($value === null) {
            return [];
        }
        if (is_array($value)) {
            return $value;
        }
        $out = [];
        foreach (get_object_vars($value) as $key => $val) {
            if ($val !== null) {
                $out[$key] = $val;
            }
        }
        return $out;
    }

    /**
     * @param array<string, mixed> $root
     * @param list<string> $path
     * @return array<string, mixed>
     */
    private static function setAtPath(array $root, array $path, string $value): array
    {
        if (count($path) === 0) {
            return $root;
        }
        $clone = $root;
        $cursor = &$clone;
        for ($i = 0; $i < count($path) - 1; $i++) {
            $key = $path[$i];
            $next = $cursor[$key] ?? [];
            $cursor[$key] = is_array($next) ? $next : [];
            $cursor = &$cursor[$key];
        }
        $cursor[$path[count($path) - 1]] = $value;
        unset($cursor);
        return $clone;
    }

    /**
     * @param array<string, mixed> $data
     * @param array<string, mixed>|null $context
     * @param list<string>|null $path
     * @return array{0: array<string, mixed>, 1: array<string, mixed>|null}
     */
    private static function withSchemaVersion(array $data, ?array $context, ?array $path, string $version, string $envelopeKey): array
    {
        if ($path === null || count($path) === 0) {
            return [$data, $context];
        }
        $head = $path[0];
        $rest = array_slice($path, 1);
        if ($head === $envelopeKey) {
            return [self::setAtPath($data, $rest, $version), $context];
        }
        if ($head === "context") {
            $ctx = is_array($context) ? $context : [];
            return [$data, self::setAtPath($ctx, $rest, $version)];
        }
        return [$data, $context];
    }

    public static function trackOrderCompletedDefault(Client $client, string $userId, TrackOrderCompletedDefault $properties, array $options = []): void
    {
        [$data, $ctx] = self::withSchemaVersion(self::toMap($properties), $options['context'] ?? null, ["context", "protocols", "schemaVersion"], "default", "properties");
        $client->track([
            'userId' => $userId,
            'event' => "Order Completed",
            'properties' => $data,
            'context' => $ctx,
            'anonymousId' => $options['anonymousId'] ?? null,
            'timestamp' => $options['timestamp'] ?? null,
            'integrations' => $options['integrations'] ?? null,
        ]);
    }

    public static function trackOrderCompleted(Client $client, string $userId, TrackOrderCompletedDefault $properties, array $options = []): void
    {
        self::trackOrderCompletedDefault($client, $userId, $properties, $options);
    }
}
"
`;

exports[`renderPhp matches the snapshot for with-refs.json 1`] = `
"<?php

// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer ht-sdks/events-sdk-php v0.0.1 or later.

declare(strict_types=1);

use Hightouch\\Client;

class IdentifyDefault
{
    /** @var mixed */
    public $email;
}

class TrackCartViewedDefault
{
    /** @var mixed */
    public $itemCount;
    /** @var mixed */
    public $amount;
    /** @var mixed */
    public $currency;
}

final class HtEvents
{
    /** @param mixed $value
     * @return array<string, mixed>
     */
    private static function toMap($value): array
    {
        if ($value === null) {
            return [];
        }
        if (is_array($value)) {
            return $value;
        }
        $out = [];
        foreach (get_object_vars($value) as $key => $val) {
            if ($val !== null) {
                $out[$key] = $val;
            }
        }
        return $out;
    }

    /**
     * @param array<string, mixed> $root
     * @param list<string> $path
     * @return array<string, mixed>
     */
    private static function setAtPath(array $root, array $path, string $value): array
    {
        if (count($path) === 0) {
            return $root;
        }
        $clone = $root;
        $cursor = &$clone;
        for ($i = 0; $i < count($path) - 1; $i++) {
            $key = $path[$i];
            $next = $cursor[$key] ?? [];
            $cursor[$key] = is_array($next) ? $next : [];
            $cursor = &$cursor[$key];
        }
        $cursor[$path[count($path) - 1]] = $value;
        unset($cursor);
        return $clone;
    }

    /**
     * @param array<string, mixed> $data
     * @param array<string, mixed>|null $context
     * @param list<string>|null $path
     * @return array{0: array<string, mixed>, 1: array<string, mixed>|null}
     */
    private static function withSchemaVersion(array $data, ?array $context, ?array $path, string $version, string $envelopeKey): array
    {
        if ($path === null || count($path) === 0) {
            return [$data, $context];
        }
        $head = $path[0];
        $rest = array_slice($path, 1);
        if ($head === $envelopeKey) {
            return [self::setAtPath($data, $rest, $version), $context];
        }
        if ($head === "context") {
            $ctx = is_array($context) ? $context : [];
            return [$data, self::setAtPath($ctx, $rest, $version)];
        }
        return [$data, $context];
    }

    public static function identifyDefault(Client $client, string $userId, ?IdentifyDefault $traits = null, array $options = []): void
    {
        [$data, $ctx] = self::withSchemaVersion(self::toMap($traits), $options['context'] ?? null, null, "default", "traits");
        $client->identify([
            'userId' => $userId,
            'traits' => $data,
            'context' => $ctx,
            'anonymousId' => $options['anonymousId'] ?? null,
            'timestamp' => $options['timestamp'] ?? null,
            'integrations' => $options['integrations'] ?? null,
        ]);
    }

    public static function identify(Client $client, string $userId, ?IdentifyDefault $traits = null, array $options = []): void
    {
        self::identifyDefault($client, $userId, $traits, $options);
    }

    public static function trackCartViewedDefault(Client $client, string $userId, TrackCartViewedDefault $properties, array $options = []): void
    {
        [$data, $ctx] = self::withSchemaVersion(self::toMap($properties), $options['context'] ?? null, null, "default", "properties");
        $client->track([
            'userId' => $userId,
            'event' => "Cart Viewed",
            'properties' => $data,
            'context' => $ctx,
            'anonymousId' => $options['anonymousId'] ?? null,
            'timestamp' => $options['timestamp'] ?? null,
            'integrations' => $options['integrations'] ?? null,
        ]);
    }

    public static function trackCartViewed(Client $client, string $userId, TrackCartViewedDefault $properties, array $options = []): void
    {
        self::trackCartViewedDefault($client, $userId, $properties, $options);
    }
}
"
`;
